--- a/homework4/css/mystyle.css
+++ b/homework4/css/mystyle.css
@@ -12,7 +12,7 @@
 }
 
 .header{
-	background-image: url("https://cdn.pixabay.com/photo/2016/02/19/10/53/background-1209461_960_720.jpg");
+	background-image: url("../img/background.jpg");
 	background-attachment: fixed;
 	background-size: cover;
 	background-position: center;
