--- a/homework4/css/mystyle.css
+++ b/homework4/css/mystyle.css
@@ -12,7 +12,7 @@
 }
 
 .header{
-	background-image: url("/img/background.jpg");
+	background-image: url("../img/background.jpg");
 	background-attachment: fixed;
 	background-size: cover;
 	background-position: center;
